--- a/inf1010/inf1010-notater.tex
+++ b/inf1010/inf1010-notater.tex
@@ -1,15 +1,21 @@
-% Created 2010-06-14 Mon 02:18
-\documentclass[a4paper,norsk,10pt]{article}
+% Created 2013-06-05 Wed 16:58
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{fixltx2e}
 \usepackage{graphicx}
 \usepackage{longtable}
 \usepackage{float}
 \usepackage{wrapfig}
 \usepackage{soul}
+\usepackage{textcomp}
+\usepackage{marvosym}
+\usepackage{wasysym}
+\usepackage{latexsym}
 \usepackage{amssymb}
 \usepackage{hyperref}
-
+\tolerance=1000
+\documentclass[a4paper,norsk,10pt]{article}
 \usepackage{fullpage} %Utnytter større del av arket.
 \usepackage[sc,osf]{mathpazo} %Pen font.
 \usepackage[norsk]{babel} %Norsk språkpakke.
@@ -18,10 +24,15 @@
 \usepackage{amsmath} %Større matematikkpakke.
 \usepackage[usenames,dvipsnames]{color} %Flere farger.
 \usepackage{parskip} %Norsk type linjeskift.
+\providecommand{\alert}[1]{\textbf{#1}}
 
-\title{INF1010 - Eksamensnotater}
-\author{Eivind, Sjur, Annabelle & Martin}
-\date{14 June 2010}
+\title{INF1010 - Eksamensnotaterx}
+\author{Eivind, Sjur, Annabelle, Martin \& Mats}
+\date{\today}
+\hypersetup{
+  pdfkeywords={},
+  pdfsubject={},
+  pdfcreator={Emacs Org-mode version 7.9.2}}
 
 \begin{document}
 
@@ -59,15 +70,17 @@
 
   negative tall er har alltid èn større range pga 0. 
 \subsection{Integere}
-\label{sec-1.1}
+\label{sec-1-1}
 
 
    Integere er heltall, og lite annet.
    Hvis vi vil konvertere en streng til en int sier vi:
+
 \begin{verbatim}
 int x = Integer.parseInt("123");
 \end{verbatim}
    Hvis vi vil konvertere(caste) et annet tall til int skriver vi:
+
 \begin{verbatim}
 int x = (int) 3.14
 \end{verbatim}
@@ -88,7 +101,7 @@ int x = (int) 3.14
 \hline
  Math.sqrt(\ldots{})  &  Kvadratrot           &  Math.sqrt(4) -> 2    \\
 \hline
- Math.pow(x, y)       &  Potens (x$^y$)       &  Math.pow(2, 3) -> 8  \\
+ Math.pow(x, y)       &  Potens (x^y)         &  Math.pow(2, 3) -> 8  \\
 \hline
 \end{tabular}
 \end{center}
@@ -98,17 +111,16 @@ int x = (int) 3.14
    
 \begin{itemize}
 \item Metodekall
-
 \begin{itemize}
 \item ++ og --
 \item * og /
 \item + og -
 \item -(som negativt fortegn)
 \end{itemize}
-
 \end{itemize}
 
    husk at:
+
 \begin{verbatim}
 int x, y=1;
 x = y++ + y + ++y;
@@ -117,12 +129,13 @@ x = y++ + y + ++y;
    så øker den slik at neste gang y brukes er den 2. 
    når vi skriver ++y så vil y være 3 før vi legger det til.
 \subsection{desimaltall}
-\label{sec-1.2}
+\label{sec-1-2}
 
 
    Jeg velger å bare leke med floats, men reglene er ca det samme som for int.
 
    konvertering fra heltall til desimaltall:
+
 \begin{verbatim}
 float x = (3 + 0.0) / 2;
 \end{verbatim}
@@ -136,65 +149,84 @@ float x = (3 + 0.0) / 2;
 
 \begin{itemize}
 \item \&\&
-
 \begin{itemize}
 \item Og
 \item true \&\& true
 \item ||
-
 \begin{itemize}
 \item Eller
 \item true || false
 \end{itemize}
-
-\end{itemize}
-
+-'!'
+\begin{itemize}
 \item ikke
        b = !false
 \item < og >
-
 \begin{itemize}
 \item mindre enn, større enn
 \item b = x<y
 \end{itemize}
-
 \item <= og >=
-
 \begin{itemize}
 \item mindre eller lik
 \item b = x<=y
 \end{itemize}
-
 \item ==
-
 \begin{itemize}
 \item er lik
 \item b = x==y
 \end{itemize}
-
 \item !=
-
 \begin{itemize}
 \item er ikke lik
 \item b = x!=y
 \end{itemize}
-
+\end{itemize}
+-'!'
+     - ikke
+       b = !false
+   - < og > 
+     - mindre enn, større enn
+     - b = x<y
+   - <= og >= 
+     - mindre eller lik       
+     - b = x<=y
+   - ==       
+     - er lik
+     - b = x==y
+   - !=
+     - er ikke lik
+     - b = x!=y
+\end{itemize}
+-'!'
+     - ikke
+       b = !false
+   - < og > 
+     - mindre enn, større enn
+     - b = x<y
+   - <= og >= 
+     - mindre eller lik       
+     - b = x<=y
+   - ==       
+     - er lik
+     - b = x==y
+   - !=
+     - er ikke lik
+     - b = x!=y
 \end{itemize}
 \subsection{presidensregler}
-\label{sec-2.1}
+\label{sec-2-1}
 
 
 \begin{itemize}
 \item Metodekall
-
 \begin{itemize}
 \item !
 \item <, <=, >=, >
-\item \texttt{=, !}
+\item ==, !=
 \item \&\&
 \item ||
 \end{itemize}
-
 \end{itemize}
 \section{Tekst - Strenger og char}
 \label{sec-3}
@@ -232,7 +264,7 @@ float x = (3 + 0.0) / 2;
 \end{tabular}
 \end{center}
 \subsection{char}
-\label{sec-3.1}
+\label{sec-3-1}
 
 
    en char-verdi er rett og slett en bokstav, den kan sammenlignes (`a' < `b') 
@@ -240,28 +272,31 @@ float x = (3 + 0.0) / 2;
    i fra ascii-verdier (alle store bokstaver er mindre enn de små bokstavene).
    og kan dermed i mange sammenhenger tenkes på som tall.
 \subsection{String}
-\label{sec-3.2}
+\label{sec-3-2}
 
 
    En string er en rekke med char-verdier, altså ord. Man kan legge ord
    sammen med pluss-opperatoren 
    (``heisann'' + `` `` + navn), man kan konvertere tall til strenger på denne måten
+
 \begin{verbatim}
 String s = "" + 42;
 \end{verbatim}
    og verdien til s vil være ``42''.
 
    Strenger kan også deles opp i arrayer ved hjelp av en split-funksjon. eks:
+
 \begin{verbatim}
 string[ ] t = s.split(" ");
 \end{verbatim}
 \subsection{Innlesing av tekst}
-\label{sec-3.3}
+\label{sec-3-3}
 
 for å lese fra terminal er det lettest å bruke en klasse som
 finnes i og java.util.*;
 
 Vi bruker også System.in
+
 
 \begin{verbatim}
 import java.util.*;
@@ -272,6 +307,7 @@ String s = tast.nextLine();
 
 Fra fil så trenger vi også noen klasser i java.io.*
 `programmet' under leser fra en fil og over i terminalen linje for linje.
+
 
 \begin{verbatim}
 import java.util.*;
@@ -290,6 +326,7 @@ while (f.hasNextLine()){
 
   Arrayer er en indeksert(fra 0) gruppe av objekter. Man må definere
   størelsen når man lager objektet.
+
 \begin{verbatim}
 String[] a = new string[3];
 \end{verbatim}
@@ -297,9 +334,10 @@ String[] a = new string[3];
 
   Man kan lage arrayer av alle mulige objekter.
 \subsection{array-metoder}
-\label{sec-4.1}
+\label{sec-4-1}
 \subsubsection{rask sortering}
-\label{sec-4.1.1}
+\label{sec-4-1-1}
+
 
 \begin{verbatim}
 import java.util.*;
@@ -321,16 +359,16 @@ chars.
 \begin{center}
 \begin{tabular}{lll}
  \textbf{Navn}  &  \textbf{Beskrivelse}                 &  \textbf{Eksempel}                             \\
- for            &  bestemt antall ganger                &  for(int i=0;i<3;i++)\{ \}                     \\
-                &  alle objekter i array                &  for(String s : a)\{ \}                        \\
+ for            &  bestemt antall ganger                &  for(int i=0;i<3;i++){ }                       \\
+                &  alle objekter i array                &  for(String s : a){ }                          \\
                 &  alle objekter i hash                 &  for(String s : hm.values())                   \\
- while          &  i mens test er sann                  &  while(b)\{ \}                                 \\
- do-while       &  utfører løkka før testen             &  do \{ \} while(b);                            \\
+ while          &  i mens test er sann                  &  while(b){ }                                   \\
+ do-while       &  utfører løkka før testen             &  do { } while(b);                              \\
  switch         &  Hopper mellom kodeblokker ved input  &  switch(c)\{case a: <>; break; default: <>;\}  \\
 \end{tabular}
 \end{center}
 \subsection{while}
-\label{sec-5.1}
+\label{sec-5-1}
 
    
    while-løkker er kanskje den enkleste formen for løkker, den gjør en blokk kode
@@ -341,12 +379,13 @@ chars.
    kan man kjøre koden ``while(kan());'' og dermed si at man skal kjøre helt til ``kan()''
    returnerer false.
 \subsection{for}
-\label{sec-5.2}
+\label{sec-5-2}
 
    
    for-løkker er en naturlig utvidelse av while da man ofte trenger tellere eller ting
    som skjer for hver gang kodeblokken skal kjøres, for eksempel en teller når man går
    igjennom et array.
+
 
 \begin{verbatim}
 for(int i=0;i<array.length;i++;){
@@ -358,21 +397,22 @@ for(int i=0;i<array.length;i++;){
    seg på ``for(initialiseringskode;predikat;postkode)'', eneste som det er strengt hva 
    man må ha i en for-løkke er predikatet. initialiseringen, kan være å sette en teller
    til noe, eller når man går igjennom noder i en graf, så kan man f.eks sette 
-   src$_{\mathrm{java}}$\{for(Node n = root;n.next!=null;n=n.next)\}
+   
 \subsection{while .. do}
-\label{sec-5.3}
+\label{sec-5-3}
 
    
    Mindre brukt løkketype, egentlig en while-løkke hvor koden kjøres minst en gang før
    predikatet blir testet.
   
 \subsection{switch}
-\label{sec-5.4}
+\label{sec-5-4}
 
 
 Ved bruk av if-setning kan man velge en av to muligheter ved at
 setningen som evalueres er \emph{true} eller \emph{false}. Med \emph{switch} kan man
 velge mellom mange inputpåstander som er \emph{integers}, \emph{chars} eller \emph{enums}. 
+
 
 \begin{verbatim}
 switch (<utrrykk>) {
@@ -452,11 +492,12 @@ Tegner selve strukturen til programmet.
 
 Tegner selve arkitekturen til programmet vårt. 
 \subsection{Navneklassen}
-\label{sec-7.1}
+\label{sec-7-1}
 
 
 +public
 -private
+\#protected
 \~{}package
 
 Vi lager en modell av problemområdet vårt (også kalt domenemodell).
@@ -468,7 +509,9 @@ Vi tegner hvor mange objekter det maksimalt kan være.
 
 Vi har forskjellige skrivemåter for verdier:
 1 - en
- * -  null, en eller flere
+\begin{itemize}
+\item -  null, en eller flere
+\end{itemize}
 1..* - minst en
 3,4,5 - tre fire eller fem
 
@@ -486,7 +529,7 @@ representasjon for N antall.
 \section{Lenkede lister}
 \label{sec-8}
 \subsection{Hva er en lenket liste?}
-\label{sec-8.1}
+\label{sec-8-1}
 
 En lenket liste er en liste med objekter refererer til neste, eller forrige objekt ved hjelp av pekere.
 
@@ -494,6 +537,7 @@ En lenket liste er en liste med objekter refererer til neste, eller forrige obje
 -Alle objekter er lenket til hverandre, eget objekt som peker på
 -første objektet.
 -Må søke i listen forfra for å finne objekter.
+
 
 
 \begin{verbatim}
@@ -522,6 +566,7 @@ Hvilke operasjoner trenger vi?
 \item fjerne en person
 \end{itemize}
 
+
 \begin{verbatim}
 class Personer {
     Person personliste ;
@@ -533,11 +578,12 @@ class Personer {
 }
 \end{verbatim}
 \subsection{Innsettingsmetoder}
-\label{sec-8.2}
+\label{sec-8-2}
 \subsubsection{LIFO}
-\label{sec-8.2.1}
+\label{sec-8-2-1}
 
 Innsetting først (LIFO):
+
 
 \begin{verbatim}
 void settInnPersonForst ( Person inn ) {
@@ -551,27 +597,14 @@ void settInnPersonForst ( Person inn ) {
 }
 \end{verbatim}
 \subsubsection{FIFO}
-\label{sec-8.2.2}
+\label{sec-8-2-2}
 
 Innsetting sist (FIFO):
 
-\begin{verbatim}
-void settInnPersonSist ( Person inn ) {
-    // Hvis lista er tom, sett inn objektet først
-    if ( personliste == null ) personliste = inn ;
-    else {
-        // finne siste element i lista
-        Person p = personliste ;
-        while (p. nestePerson != null ){
-            p = p. nestePerson;
-        }
-        // her er p.nestePerson==null, altså er p siste
-        p. nestePerson = inn;
-    }
-}
-\end{verbatim}
+CANNOT INCLUDE FILE code/lenkeeksempel4.java
 \subsubsection{Innsetting etter et bestemt objekt}
-\label{sec-8.2.3}
+\label{sec-8-2-3}
+
 
 
 \begin{verbatim}
@@ -587,7 +620,8 @@ void settInnPersonEtter ( Person e , Person i ) {
 }
 \end{verbatim}
 \subsection{Skrive ut en lenket liste}
-\label{sec-11.1}
+\label{sec-8-3}
+
 
 
 \begin{verbatim}
@@ -605,7 +639,7 @@ System. out . println ( . . . ) ;
 }
 \end{verbatim}
 \section{Rekursjon}
-\label{sec-12}
+\label{sec-9}
 
 
 Kaller seg selv.
@@ -614,6 +648,7 @@ return statement går man ``baklengs'' tilbake i call stacken og metoden
 fortsetter etter der den kalte seg selv.
 
 Klassisk eksempel på en rekursjonsmetode er dette fakultetseksempelet.
+
 
 \begin{verbatim}
 class Factorial {
@@ -636,15 +671,19 @@ class Recursion {
 Dersom fact() blir kalt med tallet 1, vil den returnere 1, ellers vil den returnere produktet av fact(n-1)*n. Denne metoden rekurserer inntil n = 1.
 Når en metode kaller seg selv, vil nye lokale variable og parametere lagres i stack, og koden utføres med disse nye variablene og parameterene fra starten aav. Den lagerr ikke kopi av metoden, kun argumenter/variabler.
 \subsection{Hanois tårn}
-\label{sec-12.1}
+\label{sec-9-1}
+
+Hanois tårn er et ganske mye brukt problem som kan løses ved rekursjon.
+Kort forklart så har du 3 pinner og en del skiver som er av forskjellige størrelser.
 \section{Binære trær}
-\label{sec-13}
+\label{sec-10}
 \subsection{Sett inn i binærtre}
-\label{sec-13.1}
+\label{sec-10-1}
 
 Under følger et eksempel på en sett-inn-metode for binære
 trær. Metoden ligger i klassen \emph{BinaryTreeNode}, og vi antar at vi har
 en metode som sammenligner verdiene til nodene, kalt \emph{compareNodes}.
+
 
 \begin{verbatim}
 void addNodeToBinaryTree(Node node) {
@@ -664,14 +703,15 @@ void addNodeToBinaryTree(Node node) {
 }
 \end{verbatim}
 \subsection{Traversering av treet}
-\label{sec-13.2}
+\label{sec-10-2}
 \subsubsection{Preorder}
-\label{sec-13.2.1}
+\label{sec-10-2-1}
 \subsubsection{Inorder}
-\label{sec-13.2.2}
+\label{sec-10-2-2}
 
 Hvis vi ønsker å traverse binærtreet i synkende rekkefølge bruker vi
 \emph{inorder traversal}.
+
 
 \begin{verbatim}
 void printNodes() {
@@ -685,9 +725,9 @@ void printNodes() {
 }
 \end{verbatim}
 \subsubsection{Postorder}
-\label{sec-13.2.3}
+\label{sec-10-2-3}
 \section{Søk}
-\label{sec-14}
+\label{sec-11}
 
   hvis vi har sorterte data vil alltid binærsøk være den raskeste måten
   å søke på. Binærsøk så halverer vi antall muligheter for hver et eksempel
@@ -731,7 +771,8 @@ void printNodes() {
   være lurt å enten sortere det først, eller dele opp mengden i delmengder og søke hver
   del for seg selv.
 \subsection{Eksempel på søking i usortert mengde med tråder}
-\label{sec-14.1}
+\label{sec-11-1}
+
 
 
 \begin{verbatim}
@@ -764,7 +805,7 @@ public class FinnMinst {
 
 class Oversikt {
     int minste = Integer.MAX_VALUE, antallFerdigeTrader = 0;  
-    
+
     synchronized void vent() {
         while (antallFerdigeTrader != 64) {
             try {wait();} catch (InterruptedException e){}      
@@ -781,11 +822,11 @@ class Oversikt {
 
 class Soketraad extends Thread {
     int [ ] tab; int start, end; Oversikt ov;
-  
+
     Soketraad(int [ ] tb, int st, int en, Oversikt o) {
         tab = tb; start = st; end = en; ov = o; 
     }
- 
+
     public void run(){
         int minVerdi = Integer.MAX_VALUE;     
         for (int i = start; ind <= end; i++)
@@ -795,7 +836,7 @@ class Soketraad extends Thread {
 }
 \end{verbatim}
 \section{Sortering}
-\label{sec-15}
+\label{sec-12}
 
   Det er ofte en fordel å sortere store mengder data for å gjøre
   søking i i data effektivt om i det hele tatt mulig.
@@ -807,11 +848,12 @@ class Soketraad extends Thread {
 \item quicksort
 \end{itemize}
 \subsection{Innstikksortering}
-\label{sec-15.1}
+\label{sec-12-1}
 
    veldig simpel sorteringsalgoritme som er effektiv på små mengder (i forhold til andre
    sorteringsalgoritmer), men taper mye når det er større mengder data som skal sorteres
    baserer seg på at man starter først i mengden og sorterer mens man itererer over mengden
+
 
 \begin{verbatim}
 class InSort{
@@ -836,13 +878,14 @@ class InSort{
 }
 \end{verbatim}
 \subsection{Quicksort}
-\label{sec-15.2}
+\label{sec-12-2}
 
 
    Mer populær for mellomstore til store datamengder, den tar et objekt fra mengden og
    forterer listen etter hva som er større og mindre enn det objektet, deretter begynner
    den å sortere de to delene på samme måte rekursivt (dermed lettere å implementere
    tråder)
+
 
 \begin{verbatim}
 public class QSort {
@@ -884,9 +927,10 @@ public class QSort {
 }
 \end{verbatim}
 \subsection{Sortering med tråder}
-\label{sec-15.3}
+\label{sec-12-3}
 
 Raskt eksempel med Quicksort som bruker tråder.
+
 
 \begin{verbatim}
 public class QSortTrad {
@@ -901,7 +945,7 @@ public class QSortTrad {
         }
         for(int i=0;i<a.length;i++){System.out.print(a[i]+" ");}
     }
-    
+
     public static void main(String[] args) {new QSortTrad();}
 
     class Qtrad extends Thread {
@@ -921,7 +965,7 @@ public class QSortTrad {
                         forst++; sist--;
                     } else break;
                 }
-        
+
                 bytt(a, forst, til);
                 antallTrader++;
                 new Qtrad(fra, forst-1).start();
@@ -938,9 +982,9 @@ public class QSortTrad {
 }
 \end{verbatim}
 \section{Packages, interfaces, tilgangsnivåer og abstract}
-\label{sec-16}
+\label{sec-13}
 \subsection{Packages}
-\label{sec-16.1}
+\label{sec-13-1}
 
 Pakker er grupper med relaterte klasser, som hjelper deg med å 
 organisere koden din. Klasser definert i en pakke, er kun tilgjengelig
@@ -960,9 +1004,10 @@ Alle klasser i Java hører til en pakke, men når ingen blir spesifisert
 blir default (global package) benyttet. Denne pakken har heller ikke
 noe navn.
 \subsubsection{Opprette en pakke}
-\label{sec-16.1.1}
+\label{sec-13-1-1}
 
 For å oprette en pakke bruker vi følgende syntax:
+
 
 \begin{verbatim}
 package MyPackage01;
@@ -970,6 +1015,7 @@ package MyPackage01;
 
 Selve filene i pakken må da legges i en mappe med nøyaktig samme navn,
 \emph{\/MyPackage01\/}. Man kan også ha et hierarki av pakker, f.eks. 
+
 
 \begin{verbatim}
 package MyPackage01.MyPackage02...
@@ -983,10 +1029,11 @@ For at Java skal finne pakkenne må de enten ligge i samme mappe som du
 allerede jobber i, eller så kan man manuelt sett \textbf{CLASSPATH} som Java
 leter etter.
 \subsubsection{Importering av pakker}
-\label{sec-16.1.2}
+\label{sec-13-1-2}
 
 Istedenfor å extende hver klasse i en pakke, for å kunne benytte
 klassene kan man bruke \emph{import}, med eller uten wildcard, slik:
+
 
 \begin{verbatim}
 import Package.Class // Importerer spesifikk klasse.
@@ -997,7 +1044,7 @@ Hele Java API'et er definert i pakker og importeres på samme måte. Det
 eneste er \emph{java.lang}, som automatisk importeres, som blant annet
 inneholder \emph{System}-klassen og \emph{println()}.
 \subsection{Interfaces}
-\label{sec-16.2}
+\label{sec-13-2}
 
 Bruker interface på en klasse hvis vi ønsker egenskaper som flere
 forskjellige klasser skal arve. Vi beskrivker kun ønsket oppførsel, og
@@ -1005,6 +1052,7 @@ ikke hvordan det skal gjøres. Metoder må skrives på nytt for hver
 gang det implementeres. 
 
 Et inteface defineres slik:
+
 
 \begin{verbatim}
 access interface InterfaceName {
@@ -1015,6 +1063,7 @@ access interface InterfaceName {
 
 Og implementeres med, 
 
+
 \begin{verbatim}
 class ClassName implements InterfaceName{ }
 \end{verbatim}
@@ -1022,21 +1071,21 @@ class ClassName implements InterfaceName{ }
 Vi kan implementere så mange interfaces vi ønsker, og separerer dem
 med komma.
 \subsubsection{Variabler i et interface}
-\label{sec-16.2.1}
+\label{sec-13-2-1}
 
 
 Variabler i et interface vil implisitt være \emph{public}, \emph{static} og
 \emph{final}. Det gjør det veldig lett å dele variabler over flere klasser
 i et program, ved å implementere dette interfacet.
 \subsubsection{Interfaces kan extende}
-\label{sec-16.2.2}
+\label{sec-13-2-2}
 
 
 Vi kan også la et interface extende et annet interface, og hvis en
 klasse implementerer det ene interfacet, må den også implementere alle
 metoder som er arvet fra det andre interfacet.
 \subsection{Tilgangsnivåer}
-\label{sec-16.3}
+\label{sec-13-3}
 
 
 \begin{center}
@@ -1054,12 +1103,13 @@ metoder som er arvet fra det andre interfacet.
 Så for å kunne bruke \emph{protected} utenfor en pakke må det være en
 subklasse av klassen, f.eks. \emph{class Class01 extends Package01.Class02}.
 \subsection{Abstract}
-\label{sec-16.4}
+\label{sec-13-4}
 
 
 Vi kan ha abstrakte metoder. Hvis en subklasse arver fra en
 superklasse med en abstrakt metode, er den nødt til å implementere
 denne metoden. Gjøres slik:
+
 
 \begin{verbatim}
 abstract type methodName(parameter);
@@ -1067,6 +1117,7 @@ abstract type methodName(parameter);
 
 Klassen de abstrakte metodene ligger i må da også defineres som
 abstrakte, slik:
+
 
 \begin{verbatim}
 abstract class ClassName{ }
@@ -1079,7 +1130,7 @@ metodene.
 Abstrakte klasser gjør at vi i objektorientert programmering kan lage
 en mer virkelighetslik objektmodell.
 \subsubsection{Bruk av final}
-\label{sec-16.4.1}
+\label{sec-13-4-1}
 
 
 Hvis vi ønsker at en metode ikke skal kunne overskrives ved arv, kan
@@ -1087,20 +1138,21 @@ vi bruke \textbf{final} foran metoden. Det samme gjelder om vi ønsker en
 klasse som ikke skal kunne arves, eller variabler vi ikke vil skal
 kunne endres. 
 \subsubsection{Forklaring}
-\label{sec-17.1}
+\label{sec-14-1}
 \begin{itemize}
 
 \item class List\\
-\label{sec-17.1.1}%
+\label{sec-14-1-1}%
 Her lager vi en klasse som vi sier at inneholder til den generiske typen E.
 
 \item class Node\\
-\label{sec-17.1.2}%
+\label{sec-14-1-2}%
 En intern klasse som ved å være intern overtar egenskapene til E
 
 \end{itemize} % ends low level
 \subsubsection{implementering av Comparable}
-\label{sec-17.2}
+\label{sec-14-2}
+
 
 \begin{verbatim}
 class Name implements Comparable <Name> {
@@ -1117,6 +1169,7 @@ class Name implements Comparable <Name> {
   * Så vi bruker da "compareTo(String);", og vi har da definert "compareTo(Name);" 
   * som kan brukes på samme måte med objekter av Name. */
 \end{verbatim}
+
 \begin{verbatim}
 class List<E extends Comparable<E>>{
 
@@ -1125,15 +1178,16 @@ class List<E extends Comparable<E>>{
   * Person klassen, til å sammenlikne E objekter av typen Person. */
 \end{verbatim}
 \section{Generiske typer}
-\label{sec-17}
+\label{sec-14}
 
 Objektholdere som kan holde hva som helst, egner seg godt til å lage datastrukturer, siden strukturen blir ikke avhengig av noen spesiell type objekt å
 kan derfor brukes på hva som helst. 
 
+
 \begin{verbatim}
 class List<E>{
     Node root;
-    
+
     class Node{
         Node(E e){ lagretObjekt = e; } 
         E lagretObjekt;
@@ -1157,15 +1211,16 @@ class List<E>{
 
 Over er et eksempel på en generisk LIFO-liste
 \section{Subklasser og polyformi}
-\label{sec-18}
+\label{sec-15}
 \subsection{Arv}
-\label{sec-18.1}
+\label{sec-15-1}
 
 Vi kan arve fra en klasse i java, ved å bruke \emph{extends}. Da vil
 klassen som arver bli kalt \emph{subklassen} og klassen det arves fra bli
 kalt \emph{superklassen}.
 
 Vi definerer først superklassen, som en vanlig klasse
+
 
 \begin{verbatim}
 class ClassName {
@@ -1175,6 +1230,7 @@ class ClassName {
 
 Så kan vi la det som blir subklassen extende denne klassen, og arve
 fra superklassen, slik:
+
 
 \begin{verbatim}
 class SubClass extends Classname {
@@ -1191,13 +1247,13 @@ som gjør dem spesielle. F.eks. kan man tenke at man lager en
 superklasse som definerer et \emph{kjøretøy}, også har du subklasser som
 utvider dette, f.eks. til \emph{varebil} og \emph{personbil}.
 \subsection{Tilgangskontroll og arv}
-\label{sec-18.2}
+\label{sec-15-2}
 
 
 Selv om du arver metoder og variabler fra en klasse, får du ikke
 tilgang til elementer som er definert som \textbf{private}.
 \subsection{Arv og konstruktører}
-\label{sec-18.3}
+\label{sec-15-3}
 
 
 Ved kjøring av en subklasse, vil både konstruktøren til subklassen og
@@ -1211,13 +1267,13 @@ Konstruktøren til superklassen vil altid eksekveres først, også går
 det nedover i hierarkiet. Kaller man på super() må dette gjøres øverst
 i konstruktøren.
 \subsection{Polymorfi}
-\label{sec-18.4}
+\label{sec-15-4}
 
 Vi kan overskrive metoder i subklassene. Java bestemmer hvilken av
 metodene som kjøres, ved run-time, ved å se på hvilke objekter som
 refereres til, selv om selve pekeren er av typen Superklasse. 
 \subsection{Object-klassen}
-\label{sec-18.5}
+\label{sec-15-5}
 
 Java definerer en Object-klasse, som er en superklasse til alle
 klasser. Det gjør at man kan ha en referansevariabel av typen Object
@@ -1226,17 +1282,18 @@ som kan referere til alle typer klasser.
 Object definerer ett sett med metoder man kan benytte, blant annet
 \emph{Object clone()}, som kloner objektet til et nytt, selvstendig objekt.
 \section{Unntak (Exceptions)}
-\label{sec-19}
+\label{sec-16}
 \subsection{Hva er unntak}
-\label{sec-19.1}
+\label{sec-16-1}
 
 Et unntak skjer når noe går galt, for eksempel å bruke en metode i et objekt
 som er null(nullPointerException). Eller prøver å få tak i en verdi i et array
 som er utenfor arrayets størelse (IndexOutOfBoundsException).
 \subsection{Fange unntak}
-\label{sec-19.2}
+\label{sec-16-2}
 
 Å fange unntak er lett
+
 
 \begin{verbatim}
 try { 
@@ -1250,6 +1307,7 @@ Man kan også bruke exceptions som en sofistikert if. Hvis man vet at koden funk
 skal skje noe på et visst punkt eller etter en viss tid, kan man bruke exceptions til å
 behandle unntaket når det kommer, eller bare gå videre i koden.
 
+
 \begin{verbatim}
 try { 
     while(noe()) { kodeSkjer(); }
@@ -1258,16 +1316,18 @@ try {
 }
 \end{verbatim}
 \subsection{Definer eget unntak}
-\label{sec-19.3}
+\label{sec-16-3}
 
 Vi kan definere våres egene unntak, hvis vi ikke finner et passende
 unntak i Java sin \emph{Exception}-klasse. Det gjøres slik:
+
 
 \begin{verbatim}
 class EgendefinertException extends Exception {}
 \end{verbatim}
 
 Vi kan så la en klasse eller en metode bruke dette, slik:
+
 
 \begin{verbatim}
 void myMethod() throws EgendefinertException {
@@ -1279,15 +1339,15 @@ void myMethod() throws EgendefinertException {
 
 Unntaket må så kastes vidre til main, eller fanges og behandles. 
 \section{Finalize, garbagecollector etc}
-\label{sec-20}
+\label{sec-17}
 
 finalize() er en metode du kan definere i klasser, som automatisk
 kjøres før objekter blir tatt av garbage collectoren og
 slettes. F.eks. hvis du skal dobbeltsjekke at en fil har blitt lukket.
 \section{Tråder (Threads)}
-\label{sec-21}
+\label{sec-18}
 \subsection{Oprettelse av en tråd}
-\label{sec-21.1}
+\label{sec-18-1}
 
 Kan implemenere \emph{Runnable} eller extende \emph{Thread} classs.
 Tråder er små prosesser inne i én prosess. Det er raskerkere å 
@@ -1297,13 +1357,14 @@ paralellprogrammering.
 
 For å oprette en tråd gjør vi følgende:
 
+
 \begin{verbatim}
 MyThreadClass myThreadClass = new MyThreadClass();
 Thread newThread = new Thread(myThreadClass);
 newThread.start(); // Kaller på run()-metoden.
 \end{verbatim}
 \subsection{Nyttige metoder}
-\label{sec-21.2}
+\label{sec-18-2}
 
 
 Hvis vi lurer på om en tråd er fullført eller ikke kan vi kalle på
@@ -1311,6 +1372,7 @@ metoden \emph{isAlive()}, som vil returnere en boolean.
 
 En annen måte å vente/få beskjed når en tråd er fullført er å bruke
 metoden \emph{join()}. Det gjøres på følgende måte:
+
 
 \begin{verbatim}
 myClass.myThread.join();
@@ -1320,7 +1382,7 @@ Vi kan også sette \textbf{prioriteten} til en tråd ved å kalle metoden
 \emph{setPriority(int level);}. Prioritetsnivået er et tall mellom 1
 og 10. 
 \subsection{Synkronisering}
-\label{sec-21.3}
+\label{sec-18-3}
 
 
 Vi kan enkelt synkronisere metoder, hvis vi ikke ønsker at flere
@@ -1331,13 +1393,14 @@ tråder må vente.
 
 Vi kan også synkronisere en blokk av kode, ved følgende statement:
 
+
 \begin{verbatim}
 synchronized(object) { 
     // Kode til å synkronisere.
 }
 \end{verbatim}
 \subsection{Kommunikasjon mellom tråder}
-\label{sec-21.4}
+\label{sec-18-4}
 
 
 Hvis vi har flere tråder som skal jobbe etterhverandre på et
@@ -1345,24 +1408,25 @@ synkronisert objekt, men det ene objektet er avhengig av at den andre
 tråden har fullført en prosedyre, kan vi benytte oss av \emph{wait()} og
 \emph{notify()}-metoden. 
 \subsubsection{wait()}
-\label{sec-21.4.1}
+\label{sec-18-4-1}
 
 
 Gjør at tråden sovner, og låser opp låsen på det synkroniserte
 objektet. Kan kaste \emph{InterruptedException}.
 \subsubsection{notify()}
-\label{sec-21.4.2}
+\label{sec-18-4-2}
 
 
 notify() vekker den andre sovende tråden, hvis den blir kalt inne i
 det samme, synkroniserte objektet.
 \subsubsection{notifyAll()}
-\label{sec-21.4.3}
+\label{sec-18-4-3}
 
 
 notifyAll() gjør det samme som notify(), men den vekker alle sovende tråder.
 \subsection{Eksempel på en enkel tråd}
-\label{sec-21.5}
+\label{sec-18-5}
+
 
 
 \begin{verbatim}
@@ -1373,12 +1437,12 @@ import java.io.*;
 class Klokke {
    public static void main(String[] args) throws IOException {
         System.out.println("Trykk [ENTER] for ? starte og stoppe");
-   
+
       BufferedReader minInn = new BufferedReader
                                    (new InputStreamReader(System.in));
 
       minInn.readLine ( );
- 
+
       // Her lages stoppeklokke-objektet:
       Stoppeklokke stoppeklokke = new Stoppeklokke();
 
@@ -1412,7 +1476,8 @@ class Stoppeklokke extends Thread {
 Nøkkelordet \emph{volatile} brukes til å indikere at en variabel skal
 endres av flere enn en tråd.
 \section{Brukergrensesnitt}
-\label{sec-22}
+\label{sec-19}
+
 
 
 \begin{verbatim}
@@ -1438,9 +1503,19 @@ til en metode.
 
 Bruk \emph{repaint()}-metoden for å tegne vindu på nytt..
 \section{Shorthands}
-\label{sec-23}
+\label{sec-20}
+\subsection{iterere over en hel collection}
+\label{sec-20-1}
+
+
+\begin{verbatim}
+for(Object o: Collection c){
+//Do something with the object
+}
+\end{verbatim}
 \subsection{If-shorthand}
-\label{sec-23.1}
+\label{sec-20-2}
+
 
 
 \begin{verbatim}
@@ -1452,41 +1527,34 @@ return y;
 
 Burde isteden skrives slik:
 
+
 \begin{verbatim}
 return (condition ? x : y);
 \end{verbatim}
 \section{Prinsipper for større programmer}
-\label{sec-24}
+\label{sec-21}
 
 -KISS
 \begin{itemize}
 \item Moduler
-
 \begin{itemize}
 \item Små
-
 \begin{itemize}
 \item Definert av grensesnitt
 \item Kun en funksjonalitet
-
 \begin{itemize}
 \item F.eks. LinkedList
 \end{itemize}
-
 \end{itemize}
-
 \end{itemize}
-
 \item Dokumentasjon
 \item Testing
 \item Versjonkontroll
 \item Konvensjoner
-
 \begin{itemize}
 \item Hvordan kode ser ut
 \item Hvordan kode struktureres
 \end{itemize}
-
 \end{itemize}
 
 Ved over ca 40 linjer i en metode, på tide å splitte.
